@@ -93,6 +93,10 @@ module ActiveRecordTest
     def test_should_have_defaults
       assert_equal e = {:action => :save}, StateMachine::Integrations::ActiveRecord.defaults
     end
+    
+    def test_should_have_a_locale_path
+      assert_not_nil StateMachine::Integrations::ActiveRecord.locale_path
+    end
   end
   
   class MachineWithoutDatabaseTest < BaseTestCase
